src/type_atoms/snapshots/syn_state_machine__type_atoms__adt__tests_sum__it_matches_sum_2_1.snap
---
source: src/type_atoms/adt.rs
expression: "(insta_match_test!(+ parse Sum2<Ident, Punct> : <),\n    insta_match_test!(* peek Sum2<Ident, Punct> : <))"
---
(
    Ok(
        V1(
            Punct {
                char: '<',
                spacing: Alone,
            },
        ),
    ),
    Some(
        1,
    ),
)
